--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -10,7 +10,9 @@
     "angular-resource": "1.2.6",
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
-    "angular-route": "1.2.6"
+    "angular-route": "1.2.6",
+    "oauth-js": "~0.2.4",
+    "angular-cookie": "~4.0.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
