Added skeleton template for product cards
This required the addition of a few new scripts:

The first of these is holder.js, which is used for inserting
placeholder images into our application programatically. (As an aside,
a directive called holderFix was required to get this to play nicely
with AngularJS)

The second of these is angular-filter, which is currently used for
formatting currency. The rest of this commit is then relatively
straightforward. A few new serializers were created on the server side
to obtain the correct vendor information on the client, and the
endpoint created in the previous commit was hooked up in StateService
via getTrendingProducts().

--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -12,7 +12,9 @@
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
     "oauth-js": "~0.2.4",
-    "angular-cookie": "~4.0.2"
+    "angular-cookie": "~4.0.2",
+    "angular-filter": "~0.4.6",
+    "holderjs": "~2.4.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
