--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -14,7 +14,8 @@
     "oauth-js": "~0.2.4",
     "angular-cookie": "~4.0.2",
     "angular-filter": "~0.4.6",
-    "holderjs": "~2.4.0"
+    "holderjs": "~2.4.0",
+    "angular-ui-router": "~0.2.11"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
