--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "1.2.6",
     "oauth-js": "~0.2.4",
     "angular-cookie": "~4.0.2",
-    "angular-strap": "~2.1.1"
+    "angular-strap": "~2.1.1",
+    "angular-bootstrap": "~0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
