--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -18,5 +18,9 @@
   "devDependencies": {
     "angular-mocks": "1.2.6",
     "angular-scenario": "1.2.6"
+  },
+  "resolutions": {
+    "angular": "1.2.6",
+    "bootstrap": "~3.0.3"
   }
 }
