Add testcase for product REST endpoints.
- add name to url patterns
- add REST as default request format for testing.
- add testcases for add/read/edit/delete/list product(s) of a vendor.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 
 *.pyc
 *.sqlite3
+
+# Eclipse files
 .project
 .pydevproject
 .pydevproject.bak
+src/.settings
+
+src/server/be_local_server/migrations/*
