--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -17,7 +17,8 @@
     "holderjs": "~2.4.0",
     "angular-ui-router": "~0.2.11",
     "angular-strap": "~2.1.1",
-    "angular-bootstrap": "~0.11.2"
+    "angular-bootstrap": "~0.11.2",
+    "masonry": "~3.1.5"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
