--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ src/.settings
 
 src/server/be_local_server/migrations/*
 src/server/media/*
+src/server/be_local_server/static/media/*
 
 !src/client/*.jpg
 
