--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -18,7 +18,8 @@
     "angular-ui-router": "~0.2.11",
     "angular-strap": "~2.1.1",
     "angular-bootstrap": "~0.11.2",
-    "masonry": "~3.1.5"
+    "masonry": "~3.1.5",
+    "angular-ui-utils": "~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
