--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -20,7 +20,7 @@
     "angular-bootstrap": "~0.11.2",
     "masonry": "~3.1.5",
     "angular-ui-utils": "~0.1.1",
-    "Jcrop" : "0.9.12"
+    "Jcrop": "~0.9.12"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
