--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -19,7 +19,8 @@
     "angular-strap": "~2.1.1",
     "angular-bootstrap": "~0.11.2",
     "masonry": "~3.1.5",
-    "angular-ui-utils": "~0.1.1"
+    "angular-ui-utils": "~0.1.1",
+    "bootstrap-tour": "~0.10.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
