--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -20,7 +20,8 @@
     "angular-bootstrap": "~0.11.2",
     "masonry": "~3.1.5",
     "angular-ui-utils": "~0.1.1",
-    "bootstrap-tour": "~0.10.1"
+    "bootstrap-tour": "~0.10.1",
+    "imagesloaded": "~3.1.8"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
