--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -32,6 +32,7 @@
   "resolutions": {
     "angular": "1.2.6",
     "bootstrap": "~3.0.3",
-    "masonry": "~3.2.0"
+    "masonry": "~3.2.0",
+    "jquery": "~2.1.0"
   }
 }
