--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -23,7 +23,8 @@
     "bootstrap-tour": "~0.10.1",
     "imagesloaded": "~3.1.8",
     "Jcrop": "~0.9.12",
-    "angular-masonry": "~0.11.0"
+    "angular-masonry": "~0.11.0",
+    "mandrill-api": "~1.0.38"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
