Add wordpress folder.

--- a/bin/nginx.conf
+++ b/bin/nginx.conf
@@ -1,32 +1,65 @@
 # nginx server configuration
 
+# Upstream to abstract backend connection(s) for Python-django
 upstream django {
   # fail_timeout=0 means we always retry an upstream even if it failed
   # to return a good HTTP response.
   server  localhost:8001;
 }
 
+# Upstream to abstract backend connections(s) for PHP
+upstream php {
+	# this should match value of "listen" directive in php-fpm pool
+	server unix:/var/run/php-fpm.sock;
+	#server 127.0.0.1:8002;
+}
+
 server {
-    listen 80;
+    listen [::]:80;
     server_name localhost *.localhost;
     
     keepalive_timeout 5;
     client_max_body_size 4G;
     
-    access_log /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/logs/beLocal.access.log;
-    error_log /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/logs/beLocal.error.log;
-    root /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/src/client/app;
+    access_log /home/sheoranjs24/Projects/beLocal/logs/beLocal.access.log;
+    error_log /home/sheoranjs24/Projects/beLocal/logs/beLocal.error.log;
+    root /home/sheoranjs24/Projects/beLocal/src/client/app;
     
     location / {
-				#try_files $uri $uri/index.html @django;
-				# use /api/ for passing requests to django
-				try_files $uri $uri/index.html;
+        #try_files $uri $uri/index.html @django;
+        # use /api/ for passing requests to django
+        try_files $uri $uri/ $uri/index.html =404;
     }
     
     location /api/ {
-        try_files $uri @django;
+        try_files $uri $uri/ @django;
         include     uwsgi_params;
     }
+
+    # wordpress site
+    location /blog/ {
+        root /home/sheoranjs24/Projects/beLocal/src/wordpress;
+        #include /home/sheoranjs24/Projects/beLocal/bin/wpsecure.conf;
+        #include /home/sheoranjs24/Projects/beLocal/bin/wpnocache.conf;
+
+        index index.php;
+        #rewrite ^/blog/(.*)+$ /blog/index.php?$1;
+        try_files $uri $uri/ $uri/index.php?$args; #query_string; #is_args$args;
+		}
+
+    # Use fastcgi for PHP files
+    location ~ \.php$ {
+        try_files $uri $uri/ $uri/index.php =404;
+
+        #Note: Make sure "cgi.fix_pathinfo=0;" in php.ini
+        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+
+        include /etc/nginx/fastcgi_params;
+        fastcgi_index index.php;
+        fastcgi_intercept_errors on;
+        fastcgi_pass unix:/var/run/php5-fmp.sock;
+    }
+	
 
     location @django {
         # http://en.wikipedia.org/wiki/X-Forwarded-For
@@ -56,23 +89,23 @@ server {
     }
     
     location /static/ {
-        alias /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/src/server/be_local_server/static/;
+        alias /home/sheoranjs24/Projects/beLocal/static/;
     }
     
     location /media/ {
-        alias /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/src/server/be_local_server/static/media/;
+        alias /home/sheoranjs24/Projects/beLocal/static/media/;
     }
     
     # Error pages
-    error_page 500 502 503 504 /404.html;
-    location = /404.html {
-        root /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/src/client/app;
-    }
+#    error_page 500 502 503 504 /404.html;
+#    location = /404.html {
+#        root /home/sheoranjs24/Projects/beLocal/src/client/app;
+#    }
 }
 
 # For local testing
 server {
-	listen localhost:8002;
+	listen localhost:9001;
 	server_name gunicorn;
 
 	client_max_body_size 20m;
