Wordpress basic setup done.

--- a/bin/nginx.conf
+++ b/bin/nginx.conf
@@ -2,64 +2,98 @@
 
 # Upstream to abstract backend connection(s) for Python-django
 upstream django {
-  # fail_timeout=0 means we always retry an upstream even if it failed
-  # to return a good HTTP response.
-  server  localhost:8001;
+    # fail_timeout=0 means we always retry an upstream even if it failed
+    # to return a good HTTP response.
+    server  localhost:8001;
 }
 
 # Upstream to abstract backend connections(s) for PHP
-upstream php {
-	# this should match value of "listen" directive in php-fpm pool
-	server unix:/var/run/php-fpm.sock;
-	#server 127.0.0.1:8002;
+upstream php-fpm {
+    # this should match value of "listen" directive in php-fpm pool
+    #server unix:/var/run/php-fpm.sock;
+    server 127.0.0.1:8002;
 }
 
 server {
     listen [::]:80;
     server_name localhost *.localhost;
-    
+
     keepalive_timeout 5;
     client_max_body_size 4G;
-    
+
     access_log /home/sheoranjs24/Projects/beLocal/logs/beLocal.access.log;
     error_log /home/sheoranjs24/Projects/beLocal/logs/beLocal.error.log;
+
     root /home/sheoranjs24/Projects/beLocal/src/client/app;
-    
+    index index.html;
+
     location / {
         #try_files $uri $uri/index.html @django;
         # use /api/ for passing requests to django
-        try_files $uri $uri/ $uri/index.html =404;
+        try_files $uri $uri/ =404; #/index.html;
     }
-    
+
+    # REST API URLs
     location /api/ {
         try_files $uri $uri/ @django;
         include     uwsgi_params;
     }
 
-    # wordpress site
-    location /blog/ {
-        root /home/sheoranjs24/Projects/beLocal/src/wordpress;
+    # Turn this on, if you want URLs with /blog/
+    #location /blog/ {
+    #    rewrite /blog/ /wordpress/ last;
+    #}
+
+    # Wordpress URLs
+    location /wordpress {
+        root /home/sheoranjs24/Projects/beLocal/src;
         #include /home/sheoranjs24/Projects/beLocal/bin/wpsecure.conf;
         #include /home/sheoranjs24/Projects/beLocal/bin/wpnocache.conf;
 
         index index.php;
-        #rewrite ^/blog/(.*)+$ /blog/index.php?$1;
-        try_files $uri $uri/ $uri/index.php?$args; #query_string; #is_args$args;
-		}
+        #rewrite ^/blog/(.+)$ /$1 break;
+        try_files $uri $uri/ /wordpress/index.php?$is_args$args; 
 
-    # Use fastcgi for PHP files
-    location ~ \.php$ {
-        try_files $uri $uri/ $uri/index.php =404;
+        # Remove trailing slash to please the routing system.
+        #if (!-d $request_filename) {
+        #    rewrite ^/(.+)/$ /$1 permanent;
+        #}
 
-        #Note: Make sure "cgi.fix_pathinfo=0;" in php.ini
-        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+        # Use fastcgi for PHP files
+        location ~ [^/]\.php(/|$) {
 
-        include /etc/nginx/fastcgi_params;
-        fastcgi_index index.php;
-        fastcgi_intercept_errors on;
-        fastcgi_pass unix:/var/run/php5-fmp.sock;
+            #Note: Make sure "cgi.fix_pathinfo=0;" in php.ini file.
+            fastcgi_split_path_info  ^((?U).+?\.php)(/?.+)$; # ^\/blog\/(.+\.php)(/.*)$;
+
+            # try_files will work if php-fpm and nginx are on same server
+            try_files $fastcgi_script_name =404;
+            # fix script_name
+            #set $script $uri; #can set to $uri too.
+            #if ($uri ~ "^/blog/(.+\.php)(/.*)") {
+            #    set $script $1;
+            #}
+
+            include /etc/nginx/fastcgi_params;
+            fastcgi_index index.php;
+            #fastcgi_param SCRIPT_NAME $script;
+            #fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; #/index.php; #fastcgi_script_name;
+            #$fastcgi_param PATH_INFO /index.php$fastcgi_path_info;
+            set $wtf $fastcgi_path_info;
+            fastcgi_param PATH_INFO $wtf;
+            #fastcgi_param PATH_TRANSLATED $document_root$fastcgi_script_name; #fastcgi_path_info;
+            #fastcgi_param SCRIPT_FILENAME $request_uri;
+            #fastcgi_param DOCUMENT_URI $document_uri;
+
+            fastcgi_intercept_errors on;
+            fastcgi_pass php-fpm;
+        }
     }
-	
+
+    # Change wordpress URLs to match directory structure
+    #location @wp {
+    #    root /home/sheoranjs24/Projects/beLocal/src/wordpress;
+    #    rewrite ^/blog/(.*)$ /wordpress/index.php?/$1 last;
+    #}
 
     location @django {
         # http://en.wikipedia.org/wiki/X-Forwarded-For
@@ -81,11 +115,10 @@ server {
  
         # Try to serve static files from nginx, no point in making an
         # *application* server like Unicorn/Rainbows! serve static files.
-        proxy_pass http://django;
-        #if (!-f $request_filename) {
-        #    proxy_pass http://django; 
-        #    break;
-        #}
+        if (!-f $request_filename) {
+            proxy_pass http://django; 
+            break;
+        }
     }
     
     location /static/ {
