Updated nginx configuration.
For Wordpress setup:
- install php5 php5-cli php5-fpm
- Update php5-fpm config file (/etc/php5/fpm/pool.d/www.conf):
   - listen = 127.0.0.1:8002  #should match nginx upstream for php-fpm
   - change listen.user, listen.group to match nginx user and group. (www-data by default)
- Change php.ini to reflect "cgi.fixpathinfo = 0"
- Start php5-fpm service:
    sudo service php5-fpm restart
- MySQL Setup: create wordpressd database and user.

Note:
I tried a bunch of config. This is the best that one that works.

Security concern:
Add other directories in src/ to deny in nginx.conf
-

--- a/bin/nginx.conf
+++ b/bin/nginx.conf
@@ -30,7 +30,7 @@ server {
     location / {
         #try_files $uri $uri/index.html @django;
         # use /api/ for passing requests to django
-        try_files $uri $uri/ =404; #/index.html;
+        try_files $uri $uri/ =404; 
     }
 
     # REST API URLs
@@ -51,13 +51,7 @@ server {
         #include /home/sheoranjs24/Projects/beLocal/bin/wpnocache.conf;
 
         index index.php;
-        #rewrite ^/blog/(.+)$ /$1 break;
-        try_files $uri $uri/ /wordpress/index.php?$is_args$args; 
-
-        # Remove trailing slash to please the routing system.
-        #if (!-d $request_filename) {
-        #    rewrite ^/(.+)/$ /$1 permanent;
-        #}
+        try_files $uri $uri/ /index.php?$is_args$args; 
 
         # Use fastcgi for PHP files
         location ~ [^/]\.php(/|$) {
@@ -67,34 +61,18 @@ server {
 
             # try_files will work if php-fpm and nginx are on same server
             try_files $fastcgi_script_name =404;
-            # fix script_name
-            #set $script $uri; #can set to $uri too.
-            #if ($uri ~ "^/blog/(.+\.php)(/.*)") {
-            #    set $script $1;
-            #}
 
             include /etc/nginx/fastcgi_params;
             fastcgi_index index.php;
-            #fastcgi_param SCRIPT_NAME $script;
-            #fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; #/index.php; #fastcgi_script_name;
-            #$fastcgi_param PATH_INFO /index.php$fastcgi_path_info;
-            set $wtf $fastcgi_path_info;
-            fastcgi_param PATH_INFO $wtf;
-            #fastcgi_param PATH_TRANSLATED $document_root$fastcgi_script_name; #fastcgi_path_info;
-            #fastcgi_param SCRIPT_FILENAME $request_uri;
-            #fastcgi_param DOCUMENT_URI $document_uri;
+            #set $wtf $fastcgi_path_info;
+            #fastcgi_param PATH_INFO $wtf;
 
             fastcgi_intercept_errors on;
             fastcgi_pass php-fpm;
         }
     }
 
-    # Change wordpress URLs to match directory structure
-    #location @wp {
-    #    root /home/sheoranjs24/Projects/beLocal/src/wordpress;
-    #    rewrite ^/blog/(.*)$ /wordpress/index.php?/$1 last;
-    #}
-
+    # API URLs
     location @django {
         # http://en.wikipedia.org/wiki/X-Forwarded-For
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
