logic to get page and page_size in request.DATA

--- a/bin/nginx.conf
+++ b/bin/nginx.conf
@@ -16,15 +16,14 @@ server {
     access_log /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/logs/beLocal.access.log;
     error_log /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/logs/beLocal.error.log;
     root /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/src/client/app;
-    
+    index index.html; 
+
     location / {
-				#try_files $uri $uri/index.html @django;
-				# use /api/ for passing requests to django
-				try_files $uri $uri/index.html;
+				try_files $uri $uri/ =404;
     }
     
     location /api/ {
-        try_files $uri @django;
+        try_files $uri $uri/ @django;
         include     uwsgi_params;
     }
 
@@ -64,24 +63,8 @@ server {
     }
     
     # Error pages
-    error_page 500 502 503 504 /404.html;
-    location = /404.html {
-        root /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/src/client/app;
-    }
-}
-
-# For local testing
-server {
-	listen localhost:8002;
-	server_name gunicorn;
-
-	client_max_body_size 20m;
-
-	location / {
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $http_host;
-		#proxy_set_header X-Forwarded-Protocol $scheme;
-		proxy_redirect off;
-		proxy_pass http://django;
-	}
+    #error_page 500 502 503 504 /404.html;
+    #location = /404.html {
+    #    root /Volumes/JSHome/Users/sheoranjs24/Code/Grad-school-work/beLocal/src/client/app;
+    #}
 }
