--- a/src/client/bower.json
+++ b/src/client/bower.json
@@ -24,7 +24,8 @@
     "imagesloaded": "~3.1.8",
     "Jcrop": "~0.9.12",
     "angular-masonry": "~0.11.0",
-    "mandrill-api": "~1.0.38"
+    "mandrill-api": "~1.0.38",
+    "infinite-scroll": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
